Add the school copy from ashley

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1417,6 +1417,13 @@ text-align: left;
   -o-background-size: cover;
   background-size: cover;
 }
+.tours {
+  background: url(../images/redrhinotours.jpg) center bottom no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
 
 .sponsor {
   background: url(../images/sponsor_sarahletter.jpg) center center no-repeat;
