--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -137,6 +137,7 @@ reference code end -->
                         <li><%= link_to 'Get Creative', "pages/getcreative" %></li>
                         <li><%= link_to 'Events', events_path %></li>
                         <li><%= link_to 'Shop + Support', products_path %></li>
+                        <li><%= link_to 'Visit', "/pages/redrhinotours" %></li>
                       </ul>
                     </div>
 
@@ -178,13 +179,13 @@ reference code end -->
                     <li><%= link_to 'Get Creative', "pages/getcreative" %></li>
                     <li><%= link_to 'Events', events_path %></li>
                     <li><%= link_to 'Shop + Support', products_path %></li>
-                    <li><%= link_to 'Visit', "pages/redrhinotours" %></li>
+                    <li><%= link_to 'Visit', "/pages/redrhinotours" %></li>
                     <hr>
                     <li><strong>CONTACT</strong></li>
                     <div class="social-media-icons">
-                      <a href="#"><%= image_tag("twitter-icon.png", :class => "img-responsive")%></a>
-                      <a href="#"><%= image_tag("facebook-icon.png", :class => "img-responsive")%></a>
-                      <a href="#"><%= image_tag("facebook-icon.png", :class => "img-responsive")%></a>
+                      <a href="https://twitter.com/redsweaterpro" target="_blank"><%= image_tag("twitter-icon.png", :class => "img-responsive")%></a>
+                      <a href="https://www.facebook.com/redsweaterproject/" target="_blank"><%= image_tag("facebook-icon.png", :class => "img-responsive")%></a>
+                      <a href="https://www.instagram.com/redsweaterproject/" target="_blank"><%= image_tag("insta.png", :class => "img-responsive")%></a>
                     </div>
 
                   </ul>
@@ -212,9 +213,9 @@ reference code end -->
         <a href="#" id="news-footer-link">News</a>
     </div>
     <div class="social-media-icons">
-      <a href="#"><%= image_tag("twitter-icon.png", :class => "img-responsive")%></a>
-      <a href="#"><%= image_tag("facebook-icon.png", :class => "img-responsive")%></a>
-      <a href="#"><%= image_tag("facebook-icon.png", :class => "img-responsive")%></a>
+      <a href="https://twitter.com/redsweaterpro" target="_blank"><%= image_tag("twitter-icon.png", :class => "img-responsive")%></a>
+      <a href="https://www.facebook.com/redsweaterproject/" target="_blank"><%= image_tag("facebook-icon.png", :class => "img-responsive")%></a>
+      <a href="https://www.instagram.com/redsweaterproject/" target="_blank"><%= image_tag("insta.png", :class => "img-responsive")%></a>
     </div>
     <h5 class="copyright"> &copy;Copyright Red Sweater Project 2016  |  All Rights Reserved  | Site by JD Design</h5>
   </div>
