--- a/app/views/pages/redrhinotours.html.erb
+++ b/app/views/pages/redrhinotours.html.erb
@@ -1,4 +1,4 @@
-<div class="page-banner creative">
+<div class="page-banner tours">
   <div class="shadow-box">
     <div class="banner-content page-canvas title-only">
       <h2>Red Rhino Tours</h2>
@@ -68,7 +68,6 @@
     </ul>
     <p><em>Starting at $5000</em></p>
   </div>
-
 </div>
 
 
