--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -7,17 +7,30 @@
 </div>
 
 <div class="flex page-canvas">
-  <div class="flex-item-1col">
-    <p>The Mungere School is the first middle and high school available to kids in the rural community of Mungere, Tanzania. Every year upwards of 200 families apply for one of the 30 available spots in the incoming class. The Mungere campus serves over 240 students each year, with students in form 2, 3, 4, 5, and 6 (grades 6-12).
+  <div class="flex-item-2col">
+    <p>The Mungere School is the first middle and high school available to kids in the rural community of Mungere, Tanzania. Every year more than 200 families apply for one of the 30-40 available spots in the incoming class.
     </p>
-    <h5><strong>THE AVERAGE FAMILY CAN'T AFFORD TO SEND THEIR KIDS TO SCHOOL</strong></h5>
-    <p>Primary school in Tanzania is free, but secondary school (middle and high school) costs about $500/year, when the average family only makes $530/year.</p>
-    <p>Even when families make sacrifices to send a child to school, there is no gaurentee of the quality of education. All formal tests in Tanzania are in English, and it's not uncommon for private secondary schools to teach in Swahili due to teacher shortages. For students living in rural areas, going to school can also mean traveling great distances, which can be dangerous and exhausting.
+
+    <p>When completed, The Mungere Campus will serve over 240 students each year, with students in grades 6-12.
     </p>
-    <h5><strong>AFFORDABLE AND ACCESSIBLE</strong></h5>
-    <p>Families pay a $15/year tuition. While it doesn't cover all expenses, tuition pays for operating costs at the school, and solidifies each family's commitment to their child's education. The school is centrally located within the village, protecting students from the vulnerability of travel, and giving them more time to study.</p>
+    <h5><strong>THE AVERAGE SCHOOL LACKS THE INFRASTRUCTURE TO EFFECTIVELY EDUCATE STUDENTS</strong></h5>
+    <p>In Tanzania, secondary schools have incredibly high student to teacher ratios (do we know a formal ratio?), teachers must utilize outdated books and learning materials, and facilities are limited. All formal tests in Tanzania are given in English, but many private secondary schools teach in Swahili, due to teacher shortages.</p>
+
+
+    <h5><strong>STILL THE AVERAGE FAMILY CAN'T AFFORD TO SEND THEIR KIDS TO SCHOOL</strong></h5>
+    <p>
+      While elementary school in Tanzania is free, middle and high school costs about $500 USD/year, making it unattainable when the average family only makes $530/year.
+    </p>
+    <p>
+      Even when families make great sacrifices to send a child to school, there is no guarantee of the quality of education. For students living in rural areas, going to school can also mean traveling great distances daily, which is both dangerous and exhausting.
+    </p>
+  </div>
+  <div class="flex-item-2col">
+    <h5><strong>THE MUNGERE SCHOOL IS AFFORDABLE AND ACCESSIBLE</strong></h5>
+    <p>Families pay $15/year in tuition. While their financial contribution doesn't cover all expenses, tuition pays for operating costs at the school and solidifies each family's commitment to their child's education. The school is centrally located within the village, protecting students from the vulnerability of travel, and giving them more time to study.</p>
+
     <h5><strong>SOMETIMES IT REALLY DOES TAKE A VILLAGE</strong></h5>
-    <p>The Parent Action commity as well as the local tribal government are activley involved with the school. Meetings are held regularly to share ideas, and problem solve as a community.</p>
+    <p>The Parent Action commity as well as the local tribal government are activley involved with the school. Meetings are held regularly to share ideas and problem solve as a community.</p>
   </div>
 </div>
 
@@ -37,27 +50,34 @@
   <div class="flex page-canvas">
     <div class="flex-item-1col">
       <h2>PREPARED FOR SUCCESS</h2>
-      <h5><strong>Our students work hard for... a competitive, high quality education</strong></h5>
-      <ul>
-        <li>• Our volunteer teachers hold MA degrees, and have completed ESL training. They come from around the world, and bring a global perspective to the classroom. We've had superb teachers from such disparate places as: China, Ireland, the United States, Mexico, and Australia.</li>
-        <li>• Mungere students consistently score in the top quarter of schools in the region and in the top 2 in the district (out of 10 schools) in government issued tests.</li>
-        <li>• The Tanzania Ministry of Education has recognized Red Sweater Project as a successful school model that gets results.
-        an atmosphere that promotes gender equality</li>
-        <li>• Boys and girls learn together in the classrooms, and in our athletics program. This approach builds the confidence of female students, and teaches all of the students that everyone has strengths, and they are not defined or limited by gender. </li>
+      <h5><strong>PREPARATION IS THE KEY TO SUCCESS. OUR STUDENTS WORK HARD FOR …</strong></h5>
+      <ul><strong>A COMPETITIVE, HIGH QUALITY EDUCATION</strong>
+        <li>• Our teachers hold advanced degrees, and lend local and cultural perspectives.
+        </li>
+        <li>Volunteer teachers have come from from China, Ireland, the United States, Mexico and Australia to donate their time and talents, and bringing a global perspective into the classroom. All teachers have completed their ESL, CELTA and TESOL trainings </li>
+        <li>• Mungere students consistently score in the top quarter of schools in the region and in the top 2 in the district (out of 23 schools) in government-issued tests.</li>
+        <li>• The Tanzania Ministry of Education has recognized Red Sweater Project as a successful school model that gets positive results.
+        </li>
+
+        <h5><strong>AN ATMOSPHERE THAT PROMOTES GENDER EQUALITY</strong></h5>
+        <li>• Boys and girls learn together both in the classrooms and on our athletic fields. This approach builds the confidence of female students and teaches all  students that everyone has strengths that are not defined or limited by gender. </li>
       </ul>
-      <h5><strong>Sustainably designed, modern facilities</strong></h5>
+
+      <h5><strong>SUSTAINABLY DESIGNED, MODERN FACILITIES</strong></h5>
       <ul>
         <li>• Solar power throughout campus has been made possible by the volunteer efforts of Engineers without Borders</li>
-        <li>• Individual solar-powered lanterns for students to use for late night studying</li>
-        <li>• Buildings designed to keep students and faculty cool in the heat and warm when it's cold out without the use of consumable fuels.</li>
+        <li>• By giving students their own solar-powered for late night studying, families save time, money and resources. It is also a healthier alternative to the traditionally-used kerosene lantern.</li>
+        <li>• Our buildings are designed to keep students and faculty cool in the heat and warm when it's cold without the use of consumable fuels.</li>
       </ul>
-      <h5><strong>Health care, health education, and sanitation services</strong></h5>
+
+      <h5><strong>HEALTH CARE AND HEALTH EDUCATION, AS WELL AS SANITATION SERVICES</strong></h5>
       <ul>
-        <li>• Clean drinking water is available for all students</li>
+        <li>• Safe drinking water is available to all students</li>
         <li>• Health outreach helps to boost health and prevent disease within the community</li>
-        <li>• If a student gets sick, they're treated. Some of the illnesses commonly treated include: malaria, typhoid and pneumonia</li>
-        <li>• Fresh, nutritious food from our organic school garden and dining facilities, which serves two meals each school day</li>
-        <li>• Campus is equipped with composting toilets and handwashing stations</li>
+        <li>• If a student becomes ill, they're treated. Illnesses commonly treated include: malaria, typhoid and pneumonia</li>
+        <li>• Fresh, nutritious food from our organic school garden and dining facilities, which serves two meals each school day. Gas burners eliminate the school's need for firewood, which would contribute to deforestation.</li>
+        <li>Future plans include construction of a dining facility, which will also serve as a school assembly area.</li>
+        <li>• Campus is equipped with composting toilets and handwashing stations with waste safely recycled to replenish nutrients in the school's garden soil.</li>
       </ul>
     </div>
   </div>
@@ -80,12 +100,15 @@
       </div>
       <div class="focusCopy">
         <h5><strong>SMALL BUSINESS SKILLS</strong></h5>
-        <p><em>The James B. Nicholson store</em></p>
+        <p><em>The School Store</em></p>
         <ul>
-          <li>• Provides a valued resource for the entire community, where local families can purchase goods and sundries. The next closest market is a 3 mile walk away, and is only open on select days</li>
-          <li>• Is the first ever solar-powered mobile phone and lantern charging station for community members</li>
+          <li>• Provides a valued resource for the entire community, where local families can purchase goods and sundries at reasonable prices. The next closest market is a 3km walk, and is only open on select days and has a limited selection</li>
+          <li>• Operates the first ever solar-powered mobile phone and lantern charging station for community members, keeping families connected. The replacement of kerosene
+          • Gives students the
+          opportunity to apply business, economics and math curriculum
+          and economics coursework to real life scenarios</li>
           <li>• Gives students the opportunity to apply math and economics coursework to real life scenarios</li>
-          <li>• Creates income for the Mungere School to off-set operational costs</li>
+          <li>• All income is reinvested in The Mungere School to off-set operational costs</li>
         </ul>
       </div>
     </div>
@@ -95,10 +118,10 @@
       </div>
       <div class="focusCopy">
         <h5><strong>NUTRITION AND AGRICULTURE</strong></h5>
-        <p><em>The Mungere School Garden</em></p>
+        <p><em>The Mungere School Garden:</em></p>
         <ul>
           <li>• Produces organic food for school meals, reducing operational costs and increasing campus sustainability</li>
-          <li>• Provides hands-on experience for agriculture class coursework. Many of our students come from pastorial tribes, and the knowledge they gain from garden work is directly applied to their own family's gardening practices.</li>
+          <li>• Provides hands-on experience for agriculture class coursework. Many of our students come from pastoral tribes, and the knowledge they gain from hands-on work in the garden is directly applied to their own family's subsistence farming practices</li>
           <li>• Creates income. Produce is sold at the school store to fund ongoing operations, while providing affordable, nutritious food to the local community. </li>
         </ul>
       </div>
@@ -111,19 +134,14 @@
         <h5><strong>LEADERSHIP AND TEAMWORK</strong></h5>
         <p><em>The Mungere Athletics Program</em></p>
         <p>
-          Sometimes lessons in teamwork, dedication and respect are taught best by doing. That's why time for athletics is built into each school week, and encouraged outside of class.
+          Sometimes lessons in teamwork, dedication and respect are taught best on the football pitch or basketball court. That's why time for athletics is built into each school week and encouraged outside of class.
         </p>
         <p>
-          Tasiana is a prime example. She is the first girl in the region to play on an all boys soccer team, and has been recognized by her fellow classmates as well as FIFA for her skills and leadership on the soccer pitch.
+          Promotes gender equality on campus. Ninth grade student Tasiana Kabuka is a prime example. She is the first girl in the region to play on an all-boys soccer team, and has been recognized by her fellow classmates as well as by FIFA for her skills and leadership on the soccer pitch.
         </p>
       </div>
     </div>
   </div>
-  <!-- <div class="flex page-canvas">
-    <div class="btns-wrapper">
-      <%= link_to 'Sponsor a program on campus', "students_path", :class => "btn btn-solid" %>
-    </div>
-  </div> -->
 </div>
 
 
