fix get creative link

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -134,7 +134,7 @@ reference code end -->
                         <li><a href="#">Donate</a></li>
                         <li><%= link_to 'Sponsor', students_path %></li>
                         <li><%= link_to 'Volunteer', volunteers_path %></li>
-                        <li><%= link_to 'Get Creative', "pages/getcreative" %></li>
+                        <li><%= link_to 'Get Creative', "/pages/getcreative" %></li>
                         <li><%= link_to 'Events', events_path %></li>
                         <li><%= link_to 'Shop + Support', products_path %></li>
                         <li><%= link_to 'Visit', "/pages/redrhinotours" %></li>
