--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -739,8 +739,9 @@ body {
   display: none;
 }
 
-.donation-details {
-  padding-top: 30px;
+.donation-type {
+  width: 100px;
+  margin-top: 0;
 }
 
 .flex.page-canvas.items-wrap {
@@ -1387,7 +1388,7 @@ text-align: left;
 
 .blue-donate {
   background-color: $text-blue;
-  padding: 60px 20px 40px 20px;
+  padding: 40px 20px 40px 20px;
   color: white;
   display: flex;
   flex-wrap: wrap;
@@ -1427,7 +1428,7 @@ text-align: left;
     padding-left: 7px;
     }
   }
-  padding-top: 60px;
+  padding-top: 40px;
   padding-right: 30px;
   form input {
     text-align: left;
