Add ashley's copy changes

--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -11,7 +11,7 @@
 <div class="flex page-canvas">
   <div class="donate-left">
     <p>
-      Your tax-deductible gift will support the incredible students at the Mungere School, helping them to complete their high school education as well as providing hands-on classes in organic agriculture and business.
+      Your tax-deductible gift supports the incredible students at The Mungere School, helping them complete their high school education as well as providing hands-on classes in organic agriculture and business.
     </p>
       <br>
       <br>
