--- a/app/views/pages/redrhinotours.html.erb
+++ b/app/views/pages/redrhinotours.html.erb
@@ -2,7 +2,7 @@
   <div class="shadow-box">
     <div class="banner-content page-canvas title-only">
       <h2>Red Rhino Tours</h2>
-      <p class="white-text">As a social business, all proceeds from tours are used to fund Red Sweater Project and improve access to education in East Africa</p>
+      <p class="white-text">As a social business, all proceeds from tours fund Red Sweater Project and improve access to education in East Africa</p>
     </div>
   </div>
 </div>
@@ -12,10 +12,10 @@
     <h2>COME VISIT TANZANIA</h2>
     <h5><strong>TRAVEL + LEISURE HAS NAMED TANZANIA ONE OF THE TOP PLACES TO VISIT IN 2017:</strong></h5>
     <ul>
-      <li>• Go on safari and see the big 5: lions, rhino, buffalo, elephants, and leopards in the wild</li>
-      <li>• Take a spice tour and go snorkeling along the white sands and turquoise waters of Zanzibar</li>
-      <li>• Shop hand-carved sculptures and jewelry by local artisans</li>
-      <li>• Visit the Mungere School and participate in a service project</li>
+      <li>• Go on safari and see the big 5: lions, rhino, buffalo, elephants, and leopards as well as giraffes, cheetahs and hundreds of species unique to Africa</li>
+      <li>• Embark on a spice tour before walking along the white sands and turquoise waters of Zanzibar</li>
+      <li>• Shop for original hand-carved sculptures and jewelry by local artisans</li>
+      <li>• Visit the Mungere School and participate in a service project with gauranteed impact</li>
       <li>• Take a guided trek to the summit of Mt. Kilimanjaro</li>
     </ul>
   </div>
