--- a/app/views/subscribers/new.html.erb
+++ b/app/views/subscribers/new.html.erb
@@ -24,7 +24,7 @@
       <div class="flex page-canvas">
         <div class="flex-item-1col intro">
           <h2>A CLEAR FOCUS</h2>
-          <p>There are (stat about number of schools to students) in Tanzania, with an average cost of $500USD per year--more than twice the average family's yearly income. A middle and high school education from a Red Sweater Project school is unique in 3 distinct ways:</p>
+          <p>There are (XXXXX) high schools to educate over (XXXXX) students in Tanzania, with an average cost of US$500 per year--more than twice the average family's yearly income. A middle and high school education from a Red Sweater Project school is unique in 3 distinct ways:</p>
         </div>
       </div>
       <div class="flex page-canvas">
