--- a/app/views/pages/getcreative.html.erb
+++ b/app/views/pages/getcreative.html.erb
@@ -56,24 +56,24 @@
       <div class="flex-item-2col">
         <h2>VOLUNTEER VACATIONS</h2>
         <p>
-          Tanzania has been rated "Best Safari Country in Africa" by both CNN Travel and SafariBookings.com. We've hosted several travelers in the ultimate Tanzanian experience, including:
+          Tanzania has been rated "Best Safari Country in Africa" by both CNN Travel and SafariBookings.com. Red Sweater Project hosts groups of all sizes and ages in the ultimate Tanzanian experience, including:
         </p>
         <ul class="padded">
           <li>
             • Volunteering at the Mungere Schools. Depending on experience, volunteer projects can range from working in the community garden to leading workshops with students.
           </li>
           <li>
-            • Outdoor adventures such as day hikes or even summiting Mt. Kilimanjaro.
+            • Outdoor adventures such as day hikes or even summiting Mt. Kilimanjaro, Africa's tallest peak.
           </li>
           <li>
-            • Safari tours exploring Ngorongoro Crater and Serengeti National Park.
+            • Safari tours exploring Ngorongoro Crater Conservation Area and Serengeti National Park.
           </li>
           <li>
-            • Tropical beaches in Zanzibar, where you can walk along turquoise waters, take a spice tour, and see rare colobus monkeys and other wildlife.
+            • Tropical beaches in Zanzibar beckon, where one can walk along turquoise waters, take a spice tour, and see rare colobus monkeys and other wildlife.
           </li>
         </ul>
         <p>
-          All proceeds from our tours directly benefit the Mungere Schools and all tours can be customized to fit your interests.
+          All proceeds directly benefit Red Sweater Schools and all tours can be customized to fit your interests.
         </p>
         <div class="btns-wrapper">
           <a href="#" class="btn btn-secondary"><span>Download the brochure</span></a>
