--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -9,21 +9,21 @@
 <div class="flex page-canvas">
   <div class="flex-item-1col">
     <p>The Mungere School is the first middle and high school available to kids in the rural community of Mungere, Tanzania. Every year more than 200 families apply for one of the 30-40 available spots in the incoming class.
-    When completed, The Mungere Campus will serve over 240 students each year, with students in grades 6-12.
+    When completed, The Mungere Campus will serve over 300 students each year, with students in grades 6-12.
     </p>
     <h5><strong>THE AVERAGE SCHOOL LACKS THE INFRASTRUCTURE TO EFFECTIVELY EDUCATE STUDENTS</strong></h5>
-    <p>In Tanzania, secondary schools have incredibly high student-to-teacher ratios (do we know a formal ratio?), teachers must utilize outdated books and learning materials, and facilities are limited. All formal tests in Tanzania are given in English, but many private secondary schools teach in Swahili, due to teacher shortages.</p>
+    <p>In Tanzania, secondary schools have incredibly high student-to-teacher ratios (do we know a formal ratio?), teachers must rely on outdated books and learning materials, and facilities are limited. All formal exams in Tanzania are given in English, but many private secondary schools still teach in Swahili, due to teacher shortages and lack of proficiency.</p>
 
 
     <h5><strong>STILL THE AVERAGE FAMILY CAN'T AFFORD TO SEND THEIR KIDS TO SCHOOL</strong></h5>
     <p>
-      While elementary school in Tanzania is free, middle and high school costs about $500 USD/year, making it unattainable when the average family only makes $530/year. Even when families make great sacrifices to send a child to school, there is no guarantee of the quality of education. For students living in rural areas, going to school can also mean traveling great distances daily, which is both dangerous and exhausting.
+      While elementary school in Tanzania is free, middle and high school costs about USD$500 per year, making it highly cost prohibitive when the average family income is roughly US $530 per year. Even when families make great sacrifices to send a child to school, there is no guarantee of the quality of education. For students living in rural areas, attending middle or high school usually means traveling great distances daily, which can be both dangerous and exhausting.
     </p>
     <h5><strong>THE MUNGERE SCHOOL IS AFFORDABLE AND ACCESSIBLE</strong></h5>
-    <p>Families pay $15/year in tuition. While their financial contribution doesn't cover all expenses, tuition pays for operating costs at the school and solidifies each family's commitment to their child's education. The school is centrally located within the village, protecting students from the vulnerability of travel, and giving them more time to study.</p>
+    <p>Families invest only US$15 per year total to cover their child's entire education. While their financial contribution doesn't cover all expenses, it pays for operating costs at the school, solidifying each family's commitment. The school is centrally located within the village, protecting students from the vulnerability of travel, and giving them much-needed time to study.</p>
 
     <h5><strong>SOMETIMES IT REALLY DOES TAKE A VILLAGE</strong></h5>
-    <p>The Parent Action Committee as well as the local tribal government are actively involved with the school. Meetings are held regularly to share ideas and problem solve as a community.</p>
+    <p>The Parent Action Committee as well as the local tribal government are actively involved with the school. Community meetings are held regularly to share ideas and solve problems in a cohesive partnership.</p>
   </div>
 </div>
 
@@ -36,13 +36,13 @@
       <ul><strong>A COMPETITIVE, HIGH QUALITY EDUCATION</strong>
         <li>• Our teachers hold advanced degrees and lend local and cultural perspectives.
         </li>
-        <li>Volunteer teachers have come from from China, Ireland, the United States, Mexico and Australia to donate their time and talents, and bring a global perspective into the classroom. All teachers have completed their ESL, CELTA and TESOL trainings. </li>
-        <li>• Mungere students consistently score in the top quarter of schools in the region and in the top 2 in the district (out of 23 schools) on government-issued tests.</li>
+        <li>Our qualified international volunteer teachers have come from from China, Ireland, the United States, Scotland, England, Mexico and Australia to donate their time and talents. All teachers have completed an ESL, CELTA or TESOL training. </li>
+        <li>• Mungere students consistently score in the top quarter of schools in the region and in the top 3 in the district (out of 23 schools) on government-issued tests.</li>
         <li>• The Tanzania Ministry of Education has recognized Red Sweater Project as a successful school model that gets positive results.
         </li>
 
         <h5><strong>AN ATMOSPHERE THAT PROMOTES GENDER EQUALITY</strong></h5>
-        <li>• Boys and girls learn together both in the classrooms and on our athletic fields. This approach builds the confidence of female students and teaches all  students that everyone has strengths that are not defined or limited by gender. </li>
+        <li>• We level the playing field for boys and girls, whether it's in the classroom, on an athletic field or a debate stage. This approach builds the confidence of female students and teaches all students that everyone has strengths that are not defined or limited by gender. </li>
       </ul>
 
       <h5><strong>SUSTAINABLY DESIGNED, MODERN FACILITIES</strong></h5>
@@ -52,7 +52,7 @@
         <li>• Our buildings are designed to keep students and faculty cool in the heat and warm when it's cold without the use of consumable fuels.</li>
       </ul>
 
-      <h5><strong>HEALTH CARE AND HEALTH EDUCATION, AS WELL AS SANITATION SERVICES</strong></h5>
+      <h5><strong>HEALTH CARE, HEALTH EDUCATION AND SANITATION SERVICES</strong></h5>
       <ul>
         <li>• Safe drinking water is available to all students.</li>
         <li>• Health outreach helps to boost health and prevent disease within the community.</li>
@@ -84,11 +84,11 @@
         <h5><strong>SMALL BUSINESS SKILLS</strong></h5>
         <p><em>The School Store</em></p>
         <ul>
-          <li>• Provides a valued resource for the entire community, where local families can purchase goods and sundries at reasonable prices. The next closest market is a 3km walk, and is only open on select days and has a limited selection.</li>
-          <li>• Operates the first ever solar-powered mobile phone and lantern charging station for community members, keeping families connected.
+          <li>• Provides a valued resource for the entire community, where local families can purchase goods and sundries at reasonable prices. The next closest market is a 3km walk, is only open on select days and has a limited selection.</li>
+          <li>• Operates the first ever solar-powered mobile phone and lantern charging station for community members, keeping families connected. Introducing a variety of cost-effective, solar-powered products into local homes removes the dangerous fumes created by kerosene lanterns.
           </li>
-          <li>• Gives students the opportunity to apply math and economics coursework to real life scenarios.</li>
-          <li>• All income is reinvested in The Mungere School to offset operational costs.</li>
+          <li>• Gives students the opportunity to apply math and economics coursework.</li>
+          <li>• All generated income is reinvested in The Mungere School to offset operational costs.</li>
         </ul>
       </div>
     </div>
