--- a/app/views/pages/redsweater.html.erb
+++ b/app/views/pages/redsweater.html.erb
@@ -24,8 +24,7 @@
 </div>
 
 <div class="flex">
-  <div class="flex-item-image">
-    <img src="../images/redsweater_commonthread.png" />
+  <div class="flex-item-image common-threads">
   </div>
 </div>
 
