Save down size of cover image

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1533,7 +1533,7 @@ form.donate-left {
 
 .home {
   position: relative;
-  background-image: url(../images/21hats.jpg);
+  background-image: url(../images/21hats_lo.jpg);
   background-repeat: no-repeat;
   background-position: center top;
   background-size: 100%;
