--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1536,7 +1536,7 @@ form.donate-left {
   background-image: url(../images/21hats_lo.jpg);
   background-repeat: no-repeat;
   background-position: center top;
-  background-size: 100%;
+  background-size: cover;
   background-attachment: fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
