--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1533,9 +1533,7 @@ form.donate-left {
 
 .home {
   position: relative;
-  background-image: url(../images/21hats_lo.jpg);
-  background-repeat: no-repeat;
-  background-position: center top;
+  background: url(../images/21hats.jpg) center top no-repeat;
   background-size: cover;
   background-attachment: fixed;
   -webkit-background-size: cover;
