--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -3,6 +3,7 @@
 @import 'sass/2-modules/modules-dir'
 @import 'sass/3-layouts/layouts-dir'
 @import 'style'
+@import 'bootstrap'
 
 $body-type-grey: #6f6f6e
 $yellow: #febe10
